# -

./: README.md  readme.md  说明.md
Project1/: .mxproject  LED.ioc
Project1/MDK-ARM/: Project1.uvguix.Benshu  Project1.uvoptx  Project1.uvprojx  startup_stm32f103xb.lst
Project2/: CMakeLists.txt  sdkconfig.old
Project2/main/: CMakeLists.txt  app_ui.c  app_ui.h  esp32s3.c  esp32s3.h  idf_component.yml  main.c
Project2/main/assets/: img_set_icon.c  img_spr_icon.c  img_th_icon.c
Project3_APP/: OLED_Display_Design.md  One_Wire_Timing_Diagram.md  README.md
Project3_APP/Hardware/: AT24C02.c  AT24C02.h  DHT11.c  DHT11.h  MPU6050.c  MPU6050.h  MPU6050_Reg.h  OLED.c  OLED.h  OLED_Font.h
Project3_APP/Output/: Auto_FcArm_Cmd.inp  Project.uvguix.Benshu  Project.uvoptx  Project.uvprojx
Project3_APP/Start/: system_stm32f10x.c
Project3_APP/User/: APP.c  APP.h  FreeRTOSConfig.h  main.c  stm32f10x_it.c
Project3_APP/bsp/: GPIO.c  GPIO.h  I2C.c  I2C.h  MyI2C.c  MyI2C.h  delay.c  delay.h
Project3_Boot/: Boot_Learn.uvguix.Benshu  Boot_Learn.uvguix.jiahuan.ni  Boot_Learn.uvoptx  Boot_Learn.uvprojx
Project3_Boot/Hardware/: AT24C02.c  FLASH.h  W25Q64.c  W25Q64.h
Project3_Boot/Listings/: Boot_Learn.map
Project3_Boot/Objects/: Boot_Learn.hex  Boot_Learn.htm  Boot_Learn_Target 1.dep  Boot_Learn_sct.Bak  at24c02.crf  at24c02.d  boot.crf  core_cm3.d  delay.d  flash.crf  i2c.d  main.d  spi.d  stm32f10x_flash.d  stm32f10x_i2c.crf  stm32f10x_it.crf  stm32f10x_rcc.crf  stm32f10x_spi.crf  stm32f10x_usart.crf  stm32f10x_usart.d  usart.d  w25q64.crf
Project3_Boot/System/: I2C.h  (+3 more)
(+232 files in other folders)
